--- a/AutomatisationTool/.project
+++ b/AutomatisationTool/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AutomatisationTool</name>
+	<name>AutomatisationToolOld</name>
 	<comment></comment>
 	<projects>
 	</projects>
