--- a/AutomatisationTool/WebContent/WEB-INF/web.xml
+++ b/AutomatisationTool/WebContent/WEB-INF/web.xml
@@ -3,9 +3,9 @@
 xmlns:web="http://java.sun.com/xml/ns/javaee" 
 xmlns="http://java.sun.com/xml/ns/javaee" 
 xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-  <display-name>AutomatisationToolOld</display-name>
+  <display-name>AutomatisationTool</display-name>
   <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>index.jsf</welcome-file>
   </welcome-file-list>
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
